--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+#
+.idea
 
 # User-specific files
 *.rsuser
@@ -27,6 +29,7 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
+ClientApp/dist
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
